--- a/_data/organization.yml
+++ b/_data/organization.yml
@@ -4,6 +4,13 @@
   url: "https://sites.google.com/view/gaelxxx/home"
   image: gaelgroupphoto.jpeg
   description: Géométrie Algébrique en Liberté, also known as GAeL, is an annual workshop organized by and for young algebraic geometers. 
+- title: 3264 and all that
+  type: Reading Group
+  highlight: 4
+  url: "/organization/3264"
+  book: "https://scholar.harvard.edu/files/joeharris/files/000-final-3264.pdf"
+  image: 3264.jpg
+  description: "3264 and all that is a textbook by David Eisenbud and Joe Harris. This page organizes the Spring 2023 reading schedule."
 - title: Positivity in Algebraic Geometry
   type: Reading Group
   url: "/organization/positivity"
