--- a/_data/travel.yml
+++ b/_data/travel.yml
@@ -8,6 +8,11 @@
   where: Chicago, IL
   start: 2023-04-14
   end: 2023-04-16
+- title: CA+
+  venue: University of Minnesota
+  where: Minneapolis, MN
+  start: 2023-04-01
+  end: 2023-04-01
 - title: Birational Complexity of Algebraic Varieties
   venue: Simons Center for Geometry and Physics
   where: Stony Brook, NY
