--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -11,7 +11,7 @@
   date: 2022-10-19
   abstract: "Understanding the syzygies among the equations defining a projective variety continues to be instrumental in understanding their properties. Starting from polynomials and proceeding with specific examples, the first part of the talk will motivate the existence of virtual syzygies which work for the larger class of toric varieties. We will then focus on recent work addressing a few questions about these analogues, such as: How can we construct (families of) examples? How complicated do they get (at least in the case of curves)?"
 - title: "Virtual Resolutions and Syzygies"
-  location: Graduate Algebraic Geometry Seminar
+  location: UW Madison Graduate Algebraic Geometry Seminar
   city: Madison, WI
   date: 2022-10-14
   abstract: "Understanding the syzygies among the equations defining a projective variety continues to be instrumental in understanding their properties. Starting from polynomials and proceeding with specific examples, the first part of the talk will motivate the existence of virtual syzygies which work for the larger class of toric varieties. We will then focus on recent work addressing a few questions about these analogues, such as: How can we construct (families of) examples? How complicated do they get (at least in the case of curves)?"
