--- a/_data/service.yml
+++ b/_data/service.yml
@@ -20,7 +20,7 @@
   location: Coventry, UK
   url: "https://sites.google.com/view/gaelxxix/home"
   years: 2023
-  description: Géométrie Algébrique en Liberté, also known as GAeL, is an annual workshop organized by and for young algebraic geometers. I helped invited speakers and write grants for funding participants.
+  description: Géométrie Algébrique en Liberté, also known as GAeL, is an annual workshop organized by and for young algebraic geometers. I helped invited speakers and wrote grants for funding participants.
 - title: Math Meet Coordinator
   at: UW Madison
   url: "https://math.wisc.edu/mega-math-meet/"
