intersection theory talk

--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -1,3 +1,9 @@
+- title: "Introduction to Intersection Theory"
+  location: UW Madison Graduate Algebraic Geometry Seminar
+  city: Madison, WI
+  date: 2022-02-01
+  url: https://wiki.math.wisc.edu/index.php/Graduate_Algebraic_Geometry_Seminar_Spring_2023
+  abstract: "In this talk, I'd like to talk about some methods used in enumerative geometry. I'll define what a Chow ring is, count some things with it, and tell you why you should read "3264 and all that" this semester with me."
 - title: "Virtual Resolutions and Syzygies"
   location: AMS Fall Western Sectional Meeting
   city: Salt Lake City, UT
