--- a/_data/service.yml
+++ b/_data/service.yml
@@ -6,7 +6,7 @@
 - title: Graduate Mentor
   at: MXM Experimental Mathematics project
   location: Madison, WI
-  years: Fall 2022
+  years: Fall 2022, Spring 2023
   description: Directed advanced undergraduates on a computationally focused research project concerning identifiable linear compartmental models. These models have applications in chemical reaction networks, epidemiology, and pharmacokinetics.
   hide: true
 - title: Graduate Mentor
@@ -49,7 +49,7 @@
   at: UW Madison Directed Reading Program 
   url: https://sites.google.com/site/uwmadisondrp/
   location: Madison, WI
-  years: Fall 2019-
+  years: Fall 2019-Spring 2024
   description: "The DRP is a math mentoring program that pairs undergraduate students with graduate student mentors, for a semester-long independent study project. The goal of this program is to get students excited about mathematics by giving them an out-of-the-classroom experience, usually in topics that are outside of their coursework."
 - title: Volunteer
   at: AMS Fall Central Sectional
