Travel to SIAM conference

--- a/_data/travel.yml
+++ b/_data/travel.yml
@@ -1,3 +1,8 @@
+- title: SIAM Conference on Applied Algebraic Geometry (AG23)
+  venue: Eindhoven University of Technology
+  where: Eindhoven, the Netherlands
+  start: 2023-07-10
+  end: 2023-07-14
 - title: GAeL XXX
   venue: University of Warwick
   where: Coventry, UK
