Update with DMS number

--- a/_data/grants.yml
+++ b/_data/grants.yml
@@ -1,8 +1,8 @@
-- name: NSF conference grant 
+- name: ($15,000) NSF conference grant DMS-2309424
   years: 2023
   sponsor: NSF
-  description: $15,000 awarded to fund US participation in the 30th edition of GAeL. 
-- name: Early-career AMS-NSF-Simons-ICM Travel Grant
+  description: Awarded to fund US participation in the 30th edition of GAeL. 
+- name: ($3,500) Early-career AMS-NSF-Simons-ICM Travel Grant
   years: 2022
   sponsor: NSF, Simons Foundation
   description: Awarded to fund participation in the International Congress of Mathematicians in Saint Petersburg, Russia, in July of 2022. Covers round-trip travel, Congress registration, accommodations, meals, cultural activities, and some ground transportation at the Congress site up to ~$3,500.
