exceptional service award

--- a/_data/awards.yml
+++ b/_data/awards.yml
@@ -1,3 +1,7 @@
+- name: Exceptional Service Award
+  years: 2023
+  sponsor: UW Madison Mathematics Department
+  description: Award based on nominations and comments from faculty, staff, and students and is given for those who contribute to the department, university or broader community through their remarkable service.
 - name: First Place (Early Stage)
   years: 2021
   sponsor: Transcend Madison Innovation Competition
