--- a/_data/travel.yml
+++ b/_data/travel.yml
@@ -8,6 +8,11 @@
   where: Coventry, UK
   start: 2023-07-03
   end: 2023-07-07
+- title: Derived Categories, Hodge theory and Singularities
+  venue: University of Sheffield
+  where: Sheffield, UK
+  start: 2023-06-28
+  end: 2023-06-30
 - title: Syzygies and Regularity
   venue: University of Illinois at Chicago
   where: Chicago, IL
