--- a/_data/travel.yml
+++ b/_data/travel.yml
@@ -1,3 +1,8 @@
+- title: Varieties from Statistics
+  venue: Institute for Mathematical and Statistical Innovation
+  where: Chicago, IL
+  start: 2023-10-02
+  end: 2023-10-06
 - title: SIAM Conference on Applied Algebraic Geometry (AG23)
   venue: Eindhoven University of Technology
   where: Eindhoven, the Netherlands
