--- a/_data/awards.yml
+++ b/_data/awards.yml
@@ -17,7 +17,7 @@
   years: 2019
   sponsor: Air Force Office of Scientific Research
   sponsor_url: https://www.ndsegfellowships.org/2019-awardees
-  description: The National Defense Science and Engineering Graduate (NDSEG) Fellowship is a highly competitive, portable fellowship that is awarded to ~120 doctoral students annually. The NDSEG Fellowship lasts for 3 years and pays for full tuition and all mandatory fees; a monthly stipend ($38,400 annually); a $5,000 travel budget over the Fellow’s tenure for professional development; and up to $1,200 a year in health insurance. I was selected for my proposal about using recent results in spectral graph theory to estimate how much confidence we should have in ranking algorithms.
+  description: The National Defense Science and Engineering Graduate (NDSEG) Fellowship is a highly competitive, portable fellowship that is awarded to ~120 doctoral students annually. The NDSEG Fellowship lasts for 3 years and pays for full tuition and all mandatory fees; a monthly stipend; a travel budget over the Fellow's tenure for professional development; and health insurance. I was selected for my proposal about using recent results in spectral graph theory to estimate how much confidence we should have in ranking algorithms.
 - name: Phi Kappa Phi Fellowship
   years: 2019
   sponsor: Phi Kappa Phi
@@ -76,7 +76,7 @@
   sponsor: Barry Goldwater Scholarship Foundation
   sponsor_url: https://goldwaterscholarship.gov/2017-scholars/
   article: http://today.cofc.edu/2017/04/07/goldwater-scholars-chemistry-cofc/
-  description: The Goldwater Scholarship is the premier undergraduate award in the fields of mathematics, the natural sciences, and engineering. The Goldwater Scholars were selected based on academic merit from a field of 1,286 natural sciences, mathematics, and engineering students nominated by the campus representatives from among 2,000 colleges and universities nationwide. Trustees awarded 240 scholarships for the 2017-2018 academic year to undergraduate sophomores and juniors from the United States. I recieved it for my research modeling semiconducting polymers in solution.
+  description: The Goldwater Scholarship is the premier undergraduate award in the fields of mathematics, the natural sciences, and engineering. Trustees awarded 240 scholarships for the 2017-2018 academic year to undergraduate sophomores and juniors from the United States. I recieved it for my research modeling semiconducting polymers in solution.
 - name: Top 10%, Virginia Tech Regional Mathematics Contest
   years: 2017
   sponsor: Math Department, Virginia Tech
