--- a/_data/organization.yml
+++ b/_data/organization.yml
@@ -1,6 +1,10 @@
-- title: GAeL XXX
+- title: GAeL XXXI
   type: Conference
   highlight: 1
+  image: gaelgroupphoto.jpeg
+  description: Géométrie Algébrique en Liberté, also known as GAeL, is an annual workshop organized by and for young algebraic geometers.   
+- title: GAeL XXX
+  type: Conference
   url: "https://sites.google.com/view/gaelxxx/home"
   image: gaelgroupphoto.jpeg
   description: Géométrie Algébrique en Liberté, also known as GAeL, is an annual workshop organized by and for young algebraic geometers. 
