--- a/_data/service.yml
+++ b/_data/service.yml
@@ -16,11 +16,11 @@
   description: Helped orient new PhD students into the PhD program at UW Madison.
   hide: true
 - title: Organizer
-  at: GAeL XXX
-  location: Coventry, UK
-  url: "https://sites.google.com/view/gaelxxix/home"
-  years: 2023
-  description: Géométrie Algébrique en Liberté, also known as GAeL, is an annual workshop organized by and for young algebraic geometers. I helped invited speakers and wrote grants for funding participants.
+  at: GAeL XXX and XXXI
+  location: Global
+  url: "https://sites.google.com/view/gaelxxx/home"
+  years: 2023-2024
+  description: Géométrie Algébrique en Liberté, also known as GAeL, is an annual workshop organized by and for young algebraic geometers. I helped invited speakers and wrote a NSF grant for funding participants.
 - title: Math Meet Coordinator
   at: UW Madison
   url: "https://math.wisc.edu/mega-math-meet/"
