No longer teaching calc 3

--- a/_data/teaching.yml
+++ b/_data/teaching.yml
@@ -17,7 +17,7 @@
   roledescription: Hold weekly problem solving sessions and office hours.
 - title: "MATH 234: Calculus Functions of Several Variables"
   panel: true
-  type: Current
+  type: Past
   role: Teaching Assistant
   professor: Cassie Williams
   year: Spring 2023
