--- a/_data/travel.yml
+++ b/_data/travel.yml
@@ -1,3 +1,11 @@
+- title: GAeL XXXI
+  where: Turin, Italy
+  start: 2024-06-17
+  end: 2024-06-21
+- title: Joint Mathematics Meetings
+  venue: San Francisco, CA
+  start: 2024-01-03
+  end: 2024-01-06
 - title: Varieties from Statistics
   venue: IMSI
   where: Chicago, IL
