Update GAeL XXX website

--- a/_data/organization.yml
+++ b/_data/organization.yml
@@ -1,7 +1,8 @@
 - title: GAeL XXXI
   type: Conference
+  url: "https://sites.google.com/view/gaelxxxi"
   highlight: 1
-  image: gaelgroupphoto.jpeg
+  image: gaelxxx.jpg
   description: Géométrie Algébrique en Liberté, also known as GAeL, is an annual workshop organized by and for young algebraic geometers.   
 - title: GAeL XXX
   type: Conference
