--- a/_data/people.yml
+++ b/_data/people.yml
@@ -22,3 +22,6 @@ Paul Anderson:
 
 Tim Chartier:
   url: "https://www.davidson.edu/people/tim-chartier"
+
+Thomas Gebhart:
+  url: "https://www.gebhartom.com"
