remove AG23, looks weird

--- a/_data/travel.yml
+++ b/_data/travel.yml
@@ -11,7 +11,7 @@
   where: Chicago, IL
   start: 2023-10-02
   end: 2023-10-06
-- title: SIAM Conference on Applied Algebraic Geometry (AG23)
+- title: SIAM Conference on Applied Algebraic Geometry
   venue: Eindhoven University of Technology
   where: the Netherlands
   start: 2023-07-10
