--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -43,7 +43,7 @@
   authors:
     - Thomas Gebhart
     - John Cobb
-  venue: Submitted to AAAI 2024
+  venue: Submitted to AAAI 
   description: We utilize a sheaf-theoretic technique to optimally extend vector representations of old entities in knowledge graphs to previously unseen entities. This technique also gives an efficient way of predicting facts about these new entities and compares well to other more complicated state-of-the-art inductive reasoning methods.
   type: 
     - Preprint
