--- a/_data/service.yml
+++ b/_data/service.yml
@@ -12,7 +12,7 @@
 - title: Graduate Mentor
   at: UW Madison
   location: Madison, WI
-  years: Fall 2022
+  years: 2022-2023
   description: Helped orient new PhD students into the PhD program at UW Madison.
   hide: true
 - title: Organizer
@@ -62,11 +62,11 @@
   years: Sep 2018-May 2019
   location: Charleston, SC
   description: Select group of 9 students who have demonstrated outstanding academic achievement and exemplar student leadership. Represent the School of Sciences and Mathematics at College of Charleston to incoming students and other interest groups
-- title: Student Vice President & Webmaster
+- title: Student Vice President
   at: Phi Kappa Phi
   years: Apr 2017-May 2019
   location: Charleston, SC
-  description: Met with board to coordinate volunteer opportunities and promote education throughout the College of Charleston campus. Helped organize events on campus for Phi Kappa Phi members. Managed the College of Charleston Chapter Phi Kappa Phi Website.
+  description: Met with board to coordinate volunteer opportunities and promote education throughout the College of Charleston campus. Helped organize events on campus for Phi Kappa Phi members. 
   hide: true
 - title: Volunteer
   at: AMS Spring Southeastern Sectional Meeting
