not relevant anymore

--- a/_data/service.yml
+++ b/_data/service.yml
@@ -61,7 +61,8 @@
   at: College of Charleston School of Sciences and Mathematics
   years: Sep 2018-May 2019
   location: Charleston, SC
-  description: Select group of 9 students who have demonstrated outstanding academic achievement and exemplar student leadership. Represent the School of Sciences and Mathematics at College of Charleston to incoming students and other interest groups
+  description: Select group of 9 students who have demonstrated outstanding academic achievement and exemplar student leadership. Represent the School of Sciences and Mathematics at College of Charleston to incoming students and other interest groups.
+  hide: true
 - title: Student Vice President
   at: Phi Kappa Phi
   years: Apr 2017-May 2019
