--- a/_data/teaching.yml
+++ b/_data/teaching.yml
@@ -13,7 +13,7 @@
 - title: "Galin Education"
   role: "Academic Tutor"
   type: Past
-  year: Aug 2022 - Current
+  year: Aug 2022 - Sep 2023
   location: Madison, WI
   roledescription: Meet with students weekly one on one to help with college level math courses.
 - title: "MATH 234: Calculus Functions of Several Variables"
