Add link to paper

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -42,7 +42,9 @@
   authors:
     - Thomas Gebhart
     - John Cobb
-  venue: Submitted to AAAI 
+  venue: Submitted to AAAI
+  pdf: https://arxiv.org/pdf/2309.03773.pdf
+  arxiv: "2309.03773"
   description: We utilize a sheaf-theoretic technique to optimally extend vector representations of old entities in knowledge graphs to previously unseen entities. This technique also gives an efficient way of predicting facts about these new entities and compares well to other more complicated state-of-the-art inductive reasoning methods.
   type: 
     - Preprint
