--- a/_data/travel.yml
+++ b/_data/travel.yml
@@ -6,6 +6,11 @@
   venue: San Francisco, CA
   start: 2024-01-03
   end: 2024-01-06
+- title: Algebra Days
+  venua: Arizona State University
+  where: Tempe, AZ
+  start: 2023-11-03
+  end: 2023-11-05
 - title: Varieties from Statistics
   venue: IMSI
   where: Chicago, IL
