--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -1,23 +1,23 @@
 - title: "Multigraded regularity of curves"
-  location: JMM 2024
+  location: JMM Special Session on Recent Developments in Commutative Algebra
   city: San Francisco, CA
   date: 2024-01-06
   url: https://www.jointmathematicsmeetings.org/meetings/national/jmm2024/2300_intro
   abstract: "The syzygies of projective curves are fairly well understood — for instance, an influential theorem of Gruson, Lazarsfeld, and Peskine gives optimal bounds on their regularity. There has been a flurry of activity in the past two decades centered around generalizing work on syzygies to the toric setting. I will discuss work that lifts machinery for understanding syzygies of projective curves to obtain a bound on the multigraded regularity of a curve in a product of projective spaces."
 - title: "Multigraded regularity of curves"
-  location: Algebra Days
+  location: Algebra Days at ASU
   city: Tempe, AZ
   date: 2023-11-04
   url: https://sites.google.com/view/asu-algebra-days/home
   abstract: "The syzygies of projective curves are fairly well understood — for instance, an influential theorem of Gruson, Lazarsfeld, and Peskine gives optimal bounds on their regularity. There has been a flurry of activity in the past two decades centered around generalizing work on syzygies to the toric setting. I will discuss work that lifts machinery for understanding syzygies of projective curves to obtain a bound on the multigraded regularity of a curve in a product of projective spaces."
 - title: "Sheaf Laplacians and Missing Data"
-  location: JMM 2024
+  location: JMM Special Session on Commutative Algebra and Algebraic Geometry
   city: San Francisco, CA
   date: 2024-01-03
   url: https://www.jointmathematicsmeetings.org/meetings/national/jmm2024/2300_intro
   abstract: "The Laplacian of a graph is a matrix that encodes the local geometry of the graph. It is a fundamental object in spectral graph theory, and has been used to study a variety of problems in machine learning. In this talk, I will discuss a generalization called the sheaf Laplacian and how this can be used to study problems with missing data in the world of knowledge graphs."
 - title: "Multigraded regularity of curves"
-  location: SIAM Applied Algebraic Geometry
+  location: AG23 Mini-Symposium on Castelnuovo-Mumford Regularity and Applications
   city: Eindhoven, The Netherlands
   date: 2023-07-11
   url: https://www.siam.org/conferences/cm/conference/ag23
@@ -29,14 +29,14 @@
   url: https://wiki.math.wisc.edu/index.php/Graduate_Algebraic_Geometry_Seminar_Spring_2023
   abstract: "In this talk, I'd like to talk about some methods used in enumerative geometry. I'll define what a Chow ring is, count some things with it, and tell you why you should read '3264 and all that' this semester with me."
 - title: "Virtual Resolutions and Syzygies"
-  location: AMS Fall Western Sectional Meeting
+  location: AMS Special Session on Building Bridges Between Commutative Algebra and Nearby Areas 
   city: Salt Lake City, UT
   date: 2022-10-22
   url: https://www.ams.org/meetings/sectional/2295_other.html
   abstract: "Understanding the syzygies among the equations defining a projective variety continues to be instrumental in understanding their properties. Starting from polynomials and proceeding with specific examples, the first part of the talk will motivate the existence of virtual syzygies which work for the larger class of toric varieties. We will then focus on recent work addressing a few questions about these analogues, such as: How can we construct (families of) examples? How complicated do they get (at least in the case of curves)?"
   slides: /talks/Virtual_Resolutions_and_Syzygies_Utah.pdf
 - title: "Virtual Resolutions and Syzygies"
-  location: CCS
+  location: Center for Computing Sciences
   city: Bowie, MD
   date: 2022-10-19
   abstract: "Understanding the syzygies among the equations defining a projective variety continues to be instrumental in understanding their properties. Starting from polynomials and proceeding with specific examples, the first part of the talk will motivate the existence of virtual syzygies which work for the larger class of toric varieties. We will then focus on recent work addressing a few questions about these analogues, such as: How can we construct (families of) examples? How complicated do they get (at least in the case of curves)?"
@@ -88,7 +88,7 @@
   abstract: The main complication to understanding the structure of a module M comes from the lack of a basis. Instead, we have a system of generators with some relations between them, and then relations between those relations, and so on. Hilbert’s insight in 1890 was that by associating free resolutions to M, we can keep track of this data and get a handle on its structure. In 2006, Mats Boij and Jonas Söderberg put out a few striking conjectures (now theorems due to Eisenbud and Schreyer in 2007) that greatly improved our understanding of free resolutions of modules over polynomial rings k[x_1,…,x_n] where k is a field, yielding near immediate proofs to a number of other conjectures. Starting from the definition of a free resolution and proceeding by examples, I will introduce Betti tables and a convex cone they span, the Boij-Söderberg conjectures that completely characterize this cone, and then sketch a surprising duality with the cohomology tables of vector bundles on projective spaces that powers the proof.
   date: 2020-11-11
 - title: "Breather Soliton Interactions for the Quaternionic KdV Equation"
-  location: AMS Contributed Paper Session on Partial Differential Equations, I
+  location: AMS Contributed Paper Session on Partial Differential Equations
   city: Baltimore, MD
   url: http://jointmathematicsmeetings.org/amsmtgs/2217_abstracts/1145-35-453.pdf
   date: 2019-01-16
@@ -112,7 +112,7 @@
   poster: /talks/rankability_poster.pdf
   hide: true
 - title: "Investigating Rankability Using Distributed Graph Analytic Frameworks"
-  location: Tresata
+  location: Tresata Lunch Seminar
   city: Charlotte, NC
   date: 2017-08-15
 - title: "Growth of P3HT-PCBM Nanostructures at Solvent-Solvent Interfaces"
@@ -132,10 +132,6 @@
   location: Data Science Club
   city: Charleston, SC
   date: 2016-11-13
-- title: "Investigating the Stability of P3HT Solutions Using Light Scattering and Zeta-Potential Measurements"
-  location: ACS Southeast Regional Meeting
-  city: Columbia, SC
-  date: 2016-10-13
 - title: "Concentration Dependence of the Self-Assembly of Poly(3-hexylthiophene)"
   location: CofC Department of Chemistry and Biochemistry Colloquium
   city: Charleston, SC
