--- a/_data/education.yml
+++ b/_data/education.yml
@@ -3,7 +3,7 @@
   degree: Ph.D. in Mathematics, Minor in Computer Science
   location: Madison, WI
   description: 
-  - "Studying algebraic geometry, advised by Daniel Erman and Michael Kemeny."
+  - "Advisors: Daniel Erman, Michael Kemeny."
 - university: Honors College of Charleston
   years: 2015-2019
   degree: B.S. Mathematics | B.A. Chemistry | Minor Data Science
