take away CS minor

--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 - university: University of Wisconsin-Madison
   years: 2019-
-  degree: Ph.D. in Mathematics, Minor in Computer Science
+  degree: Ph.D. in Mathematics
   location: Madison, WI
   description: 
   - "Advisors: Daniel Erman, Michael Kemeny."
